add new text, news references and uploading a diretory to save figures

--- a/text/bibli.bib
+++ b/text/bibli.bib
@@ -1416,12 +1416,6 @@ year={1972}
   publisher={JSTOR}
 }
 
-@phdthesis{loxton2014authoritarian,
-  title={Authoritarian inheritance and conservative party-building in Latin America},
-  author={Loxton, James Ivor},
-  year={2014}
-}
-
 @article{booth1984political,
   title={The political culture of authoritarianism in Mexico: a reexamination},
   author={Booth, John A and Seligson, Mitchell A},
@@ -1807,5 +1801,133 @@ year={1972}
   volume={10},
   pages={41--65},
   year={1990}
+}
+
+@article{pinto2004indoctrinating,
+  title={Indoctrinating the youth of post-war Spain: A discourse analysis of a fascist civics textbook},
+  author={Pinto, Derrin},
+  journal={Discourse \& Society},
+  volume={15},
+  number={5},
+  pages={649--667},
+  year={2004},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{mietzner2014indonesia,
+  title={Indonesia's 2014 elections: How Jokowi won and democracy survived},
+  author={Mietzner, Marcus},
+  journal={Journal of Democracy},
+  volume={25},
+  number={4},
+  pages={111--125},
+  year={2014},
+  publisher={Johns Hopkins University Press}
+}
+
+@article{goldschlager1982towards,
+  title={Towards a semiotics of authoritarian discourse},
+  author={Goldschl{\"a}ger, Alain},
+  journal={Poetics Today},
+  volume={3},
+  number={1},
+  pages={11--20},
+  year={1982},
+  publisher={JSTOR}
+}
+
+@book{muller2017populism,
+  title={What is populism?},
+  author={M{\"u}ller, Jan-Werner},
+  year={2017},
+  publisher={Penguin UK}
+}
+
+@article{gounari2018authoritarianism,
+  title={Authoritarianism, Discourse and Social Media: Trump as the ‘American Agitator’},
+  author={Gounari, Panayota},
+  journal={Critical Theory and Authoritarian Populism},
+  pages={207},
+  year={2018}
+}
+
+@article{hunter2019bolsonaro,
+  title={Bolsonaro and Brazil's Illiberal Backlash},
+  author={Hunter, Wendy and Power, Timothy J},
+  journal={Journal of Democracy},
+  volume={30},
+  number={1},
+  pages={68--82},
+  year={2019},
+  publisher={Johns Hopkins University Press}
+}
+
+@book{lodge2013rationalizing,
+  title={The rationalizing voter},
+  author={Lodge, Milton and Taber, Charles S},
+  year={2013},
+  publisher={Cambridge University Press}
+}
+
+@article{lawson2010looking,
+  title={Looking like a winner: Candidate appearance and electoral success in new democracies},
+  author={Lawson, Chappell and Lenz, Gabriel S and Baker, Andy and Myers, Michael},
+  journal={World Politics},
+  volume={62},
+  number={4},
+  pages={561--593},
+  year={2010},
+  publisher={Cambridge University Press}
+}
+
+@article{weyland2013latin,
+  title={Latin America's authoritarian drift: the threat from the populist Left},
+  author={Weyland, Kurt},
+  journal={Journal of democracy},
+  volume={24},
+  number={3},
+  pages={18--32},
+  year={2013},
+  publisher={Johns Hopkins University Press}
+}
+
+@book{mudde2000ideology,
+  title={The ideology of the extreme right},
+  author={Mudde, Cas},
+  year={2000},
+  publisher={Oxford University Press}
+}
+
+@article{lyons2016victorious,
+  title={From victorious rebels to strong authoritarian parties: prospects for post-war democratization},
+  author={Lyons, Terrence},
+  journal={Democratization},
+  volume={23},
+  number={6},
+  pages={1026--1041},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
+
+@article{grzymala2006authoritarian,
+  title={Authoritarian determinants of democratic party competition: The communist successor parties in East Central Europe},
+  author={Grzymala-Busse, Anna},
+  journal={Party Politics},
+  volume={12},
+  number={3},
+  pages={415--437},
+  year={2006},
+  publisher={Sage Publications London, Thousand Oaks, New Delhi}
+}
+
+@article{loxton2015authoritarian,
+  title={Authoritarian successor parties},
+  author={Loxton, James},
+  journal={Journal of Democracy},
+  volume={26},
+  number={3},
+  pages={157--170},
+  year={2015},
+  publisher={Johns Hopkins University Press}
 }
 
