--- a/text/dissertacao.tex
+++ b/text/dissertacao.tex
@@ -419,11 +419,11 @@ O que observou-se após a Terceira Onda de Democratização, todavia, foi um fen
 
 O fato de políticos autoritários serem eleitos em regimes democráticos põem em cheque classificações binárias de sistemas políticos. A ascenção dessas lideranças a chefia do executivo aumenta as chances de transições de governo conflituosas, retrocessos na qualidade da democracia, aumento da percepção de corrupção e erosão de direitos civis \cite{mounk2018thepopulist}. Ou seja, a presença de agentes autoritários no governo, independente das instituições políticas de um país, proporciona administrações que se distanciam dos ideiais democráticos. 
 
-Partindo disso, pode-se definir o autoritarismo em três camadas: i) no nível das configurações do regime, ii) das práticas dos agentes institucionais e iii) da psicologia dos atores políticos \cite{glasius2018authoritarianism}. Nesse sentido, um sistema político é autoritário quando veta eleições, tutela os direitos políticos dos cidadãos e concentra amplos poderes na elite. Já no nível intermediário, práticas autoritárias são caracterizadas por decisões que afetam o *accountability* vertical, na medida em que limitam a liberdade de expressão efetiva dos cidadãos, controlam o acesso à informação ou violam a privacidade, por exemplo. Por fim, no nível individual, políticos podem ser classificados como mais ou menos autoritários de acordo com a sua adesão aos princípios de que i) a sociedade deve ser organizada em torno da autoridade e de regras rígidas e ii) que indivíduos desviantes devem ser punidos.
+Partindo disso, pode-se definir o autoritarismo em três camadas: i) no nível das configurações do regime, ii) das práticas dos agentes institucionais e iii) da psicologia dos atores políticos \cite{glasius2018authoritarianism}. Nesse sentido, um sistema político é autoritário quando veta eleições, tutela os direitos políticos dos cidadãos e concentra amplos poderes na elite. Já no nível intermediário, práticas autoritárias são caracterizadas por decisões que afetam o \emph{accountability} vertical, na medida em que limitam a liberdade de expressão efetiva dos cidadãos, controlam o acesso à informação ou violam a privacidade, por exemplo. Por fim, no nível individual, políticos podem ser classificados como mais ou menos autoritários de acordo com a sua adesão aos princípios de que i) a sociedade deve ser organizada em torno da autoridade e de regras rígidas e ii) que indivíduos desviantes devem ser punidos.
 
 A diferenciação analítica do fenômeno em níveis, apesar de na prática eles estarem conectados, é importante para assinalar que o autoritarismo está presente em todas as formas de organização política, inclusive em regimes democráticos estabelecidos. Seja nas atitudes do eleitorado ou comportamento dos parlamentares, sua expressão encontra-se em latência num grande número de sociedades, suscetível a fatores que estimulam ou restringem sua emergência. 
 
-Do ponto de vista da imagem que agentes políticos autoritários constroem de si mesmo, suas plataformas de campanha variam significativamente por contexto cultural. Na Europa Ocidental, partidos de extrema-direita e direita radical tendem a incorporar nativismo, xenofobia, racismo e neoliberalismo em seus discursos \cite{mudde2009populist}. Nos EUA, Nova Zelândia e Canadá, a política do ressentimento, manifesta pela rejeição ostensiva ao *establishment*, conjuga a tônica dos *ousiders* anti-democráticos, e, no caso da Rússia, a xenofobia e o ultranacionalismo desempenham esse papel \cite{norris2005radical}. 
+Do ponto de vista da imagem que agentes políticos autoritários constroem de si mesmo, suas plataformas de campanha variam significativamente por contexto cultural. Na Europa Ocidental, partidos de extrema-direita e direita radical tendem a incorporar nativismo, xenofobia, racismo e neoliberalismo em seus discursos \cite{mudde2009populist}. Nos EUA, Nova Zelândia e Canadá, a política do ressentimento, manifesta pela rejeição ostensiva ao \emph{establishment}, conjuga a tônica dos \emph{ousiders} anti-democráticos, e, no caso da Rússia, a xenofobia e o ultranacionalismo desempenham esse papel \cite{norris2005radical}. 
 
 No caso Latino-americano, há um grande número de casos de partidos de extrema-direita que herdaram laços, conexões, recursos e reputação de regimes autoritários que precederam as transições democráticas que ocorreram ao longo da década de 70 e 80 \cite{loxton2014authoritarian}. Em comum, compartilham a defesa de políticas de segurança *mano dura* como alavanca de campanha para angariar votos do eleitorado que, a despeito de antipatizar com as plataformas liberalizantes da economia, enxergava, nas lideranças linha-dura, qualidades que permitiriam reestabelecer a ordem sobre o caos gerado pela insegurança.
 
@@ -474,19 +474,17 @@ Contudo, importante ressaltar que apesar dos grandes enunciados que constituem g
 
 A existência de um ranking social, que possui lugar de destaque para poucos e de subalternidade, para muitos, possui gênese anterior a civilização como conhecemos. As assimetrias que observamos nas relações sociais são fruto de um longo histórico de disputas e competição que acompanham a trajetória de sobrevivência de todas as espécies. 
 
-Dentre as causas da hierarquia entre indivíduos, que funda a desigualdade observada na comunicação, a literatura aponta características individuais como determinantes significativos do desenvolvimento de dominância em grupos animais e humanos. Cor \cite{bakker1983determinants}, idade \cite{cote2000dominance, bohlin2001determinants}, peso corporal \cite{morgan2000predictors} e altura \cite{huang2002camera} estão entre os principais preditores da posição social de um indivíduo.    
+Dentre as causas da hierarquia entre indivíduos, que funda a desigualdade observada na comunicação, a literatura aponta características individuais como determinantes significativos do desenvolvimento de dominância em grupos animais e humanos. Pesquisas documentam cor \cite{bakker1983determinants}, idade \cite{cote2000dominance, bohlin2001determinants}, peso corporal \cite{morgan2000predictors}, altura \cite{huang2002camera} e aparência \cite{lawson2010looking, lodge2013rationalizing} como alguns dos preditores da posição social de um indivíduo.    
 
-Se por um lado características sociais explicam o surgimento da dominância, por outro, não são o único ingrediente do surgimento e estabilidade de cadeias de hierarquia que envolvem muitos integrantes. A disputa pelo lugar de dominância é mediada pela dinâmica interna dos grupos que compõem uma sociedade \cite{ridgeway1989dominance} e, em seguida, das relações entre os grupos \cite{chase1980social,chase2002individual}. Ou seja, a desigualdade é segmentada por clivagens formadas a partir de uma dinâmica complexa que envolvem aglutinações hierarquizadas de individúos em grupos que podem ser ordenados por status.  
+Se por um lado características individuais explicam o surgimento da dominância, por outro, não são o único ingrediente do surgimento e estabilidade de cadeias de hierarquia que envolvem muitos integrantes. A disputa pelo lugar de dominância é mediada pela dinâmica interna dos grupos que compõem uma sociedade \cite{ridgeway1989dominance} e, em seguida, das relações entre os grupos \cite{chase1980social,chase2002individual}. Ou seja, a desigualdade é segmentada por clivagens formadas a partir de uma dinâmica complexa que envolvem aglutinações hierarquizadas de individúos em grupos que podem ser ordenados por status.  
 
-Como argumentam \citeonline{sidanius2001social}, uma vez que grupos sociais são formados em torno de clivagens específicas -- por exemplo idade, gênero, clãs, nacionalidade, religião, cor e classe social -- seus integrantes reproduzem comportamento competitivo no qual buscam estabelecer superioridade. Nessa dinâmica, a formação de grupos dominantes e dominados estabelece a base da desigualdade, que consiste em uma sobreatribuição de valores positivos aos dominantes e, de valores negativos, aos dominados.
+Como argumentam \citeonline{sidanius2001social}, uma vez que grupos sociais são formados em torno de clivagens específicas -- por exemplo idade, gênero, clãs, nacionalidade, religião, cor e classe social -- seus integrantes reproduzem comportamento competitivo no qual buscam estabelecer superioridade. Nessa dinâmica, a formação de grupos dominantes e dominados estabelece a base da desigualdade, que consiste em uma sobreatribuição de valores positivos aos dominantes e, de valores negativos, aos dominados. Uma vez que discursos refletem relações de dominância presentes na sociedade, expressões linguísticas do autoritarismo tendem a carregar traços valorativos presentes no seu conteúdo ideológico: a exaltação das figuras reconhecidas como autoridade e a depreciação de grupos minoritários de status social mais baixo. 
 
-Uma vez que discursos refletem relações de dominância presentes na sociedade, expressões linguísticas do autoritarismo tendem a carregar traços valorativos presentes no seu conteúdo ideológico: a exaltação das figuras reconhecidas como autoridade e a depreciação de grupos minoritários, que possuem status social mais baixo. 
+Conforme argumentou-se na seção anterior, indivíduos autoritários aprensentam maior propensão a expressão de preconceito e discriminação em geral. Ainda sobre o conteúdo de discursos autoritários, a literatura aponta a conexão entre autoritarismo e demonstração de hostilidade \cite{siegel1956relationship} e trabalhos que se dedicaram a investigar grupos políticos extremistas produziram resultados que sugerem que o dogmatismo político está correlacionado ao uso de discurso de ódio contra adversários e minorias \cite{gerstenfeld2003hate, ben2016hate}.  
 
-Conforme argumentou-se na seção anterior, indivíduos autoritários aprensentam maior propensão a expressão de preconceito e discriminação em geral. Ainda sobre o conteúdo de discursos autoritários, a literatura aponta a conexão entre autortarismo e demonstração de hostilidade \cite{siegel1956relationship} e trabalhos que se dedicaram a investigar grupos políticos extremistas produziram resultados que sugerem que o dogmatismo político está correlacionado ao uso de discurso de ódio contra adversários e minorias \cite{gerstenfeld2003hate, ben2016hate}.  
+O discurso autoritário apresenta ainda dimensões revelevantes no que dizem respeito a sua forma e estilo. \citeonline{beauzamy2013discontinuities} argumentou que dois traços comuns ao discurso facista no passado e no presente, são: i) o uso de argumentos elaborados com base em pseudo-ciência, teorias da conspiração, considerações mágicas e exegese religiosa e ii) uso de clichês e esteriótipos populares como metáforas em menções pejorativas a populações marginalizadas.
 
-O discursor autoritário apresenta ainda dimensões revelevantes no que dizem respeito a sua forma e estilo. \citeonline{beauzamy2013discontinuities} argumentou que dois traços comuns ao discurso facista no passado e no presente, são: i) o uso de argumentos elaborados com base em pseudo-ciência, teorias da conspiração, considerações mágicas e exegese religiosa e ii) uso de clichês e esteriótipos populares como metáforas em menções pejorativas a populações marginalizadas.
-
-Em convergência com essa caracterização, \citeonline{smith1990symptomology}, analisando debates parla\-mentares acerca da ``proibição do fomento a homosexualidade'' que ocorreram entre as décadas de 80 e 90, nos EUA, apontou que as falas autoritárias que emergiram sobre o tema apresentavam um traço marcante: a evocação de preconceitos e associações espúrias como forma de enquadrar a discussão de forma desfavorável para a população gay. Em um dos exemplos, a autora apresenta casos de menção a AIDS como \emph{link} entre homossexualidade e problemas de saúde pública:
+Em convergência com essa caracterização, \citeonline{smith1990symptomology} apresentou constribuição relevante para uma tipologia dos discursos autoritários analisando debates parlamentares acerca da ``proibição do fomento a homosexualidade'', que ocorreram entre as décadas de 80 e 90, nos EUA. Segundo a autora as falas autoritárias que emergiram sobre o tema apresentavam um traço marcante: a evocação de preconceitos e associações espúrias como método de enquadrar a discussão de forma desfavorável para a população gay. Em um dos exemplos dessa atitude, a menção à soropositividade como \emph{link} entre homossexualidade e problemas de saúde pública:
 
 \begin{samepage}
 	\begin{quote}
@@ -494,31 +492,66 @@ Em convergência com essa caracterização, \citeonline{smith1990symptomology}, 
 	\end{quote}
 \end{samepage}
 
-A conexão entre AIDS e homossexualidade é um caso típico do fenômeno cognitivo documentado como \emph{illusory correlation}, segundo o qual duas categorias de eventos são associadas sem que sua co-ocorrência estatística seja signficativa. Além de uma inferência incorreta, capaz de estimular conclusões inadequadas, está na raiz do reforço de esteriótipos de raça, gênero e sexualidade que fazem parte do discurso autoritário. Quando indivíduos percebem maior frequencia relativa de comportamentos rejeitados em um grupo, há uma tendência de identificá-los como atributo intrínseco ao grupo em questão, mesmo que a ocorrência absoluta de ``imposturas'' seja baixa \cite{sidanius2001social}.   
+A conexão entre soropositividade e homossexualidade é um caso típico do fenômeno cognitivo documentado como \emph{illusory correlation}, segundo o qual duas categorias de eventos são associadas sem que sua co-ocorrência estatística seja signficativa. Além de uma inferência incorreta, capaz de estimular conclusões inadequadas, está na raiz do reforço de esteriótipos de raça, gênero e sexualidade que fazem parte do discurso autoritário. Quando indivíduos percebem maior frequencia relativa de comportamentos rejeitados em um grupo, há uma tendência de identificá-los como atributo intrínseco ao grupo em questão, mesmo que a ocorrência absoluta de ``imposturas'' seja baixa \cite{sidanius2001social}.   
 
-Além da frequente negativação de populações identicadas como desviantes, discursos autoritários também envolvem constantes apelos a restauração da autoridade. 
+Além da frequente expressão de rejeição às populações identicadas como desviantes, discursos autoritários também envolvem constantes apelos a restauração da autoridade. Narrativas organicamente conectadas com o passado, que proclamam a restauração da ordem social e dos bons tempos que precederam o período atual tendem a ser instrumento de políticos autoritários para se colocarem como alternativas de crise \cite{pinto2004indoctrinating, mietzner2014indonesia}. 
 
-In his essay Discourse in the Novel (1981), Bakhtin describes AD as a type of political discourse that is intimately fused to its authority, ‘organically connected with a past that is felt to be hierarchically higher’, an authority that was ‘already
-acknowledged in the past’ (p. 342).
+Com isso, políticos autoritários as vezes se apresentam como alternativas radicais para condução de processos revolucionários ou de transição radical. Nesses cenários, discursos populistas que antagonizam as elites no poder com o ``verdadeiro povo'' são a principal estratégia eleitoral lideranças \cite{muller2017populism, levitsky2018democracies}. A ploclamação de uma conexão íntima com a cultura, a tradição e os anseios da massa e o uso de forma verbal imperativa, autocentrada e reativa também são características marcantes de figuras autoritárias que buscam estabelecer uma nova hegemonia \cite{goldschlager1982towards, gounari2018authoritarianism, hunter2019bolsonaro}.
 
-De maneira sintética, pode-se definir a estrutura ideal de um discurso autoritária a partir da Figura 1.
-
-\noindent APRESENTAR ESQUEMA DE ESTRUTURA TÍPICA DE DISCURSO AUTORITÁRIO
+Em síntese, o discurso autoritário é marcado por forte traço de polarização entre autoridades e indivíduos desviantes. Seja por referência direta ou indireta, às autoridades são atribuídas fortuna moral e, aos deviantes, todo o mal experienciado pelos "verdadeiros cidadãos". De modo a cristalizar valores e dogmas, políticos autoritários frequentemente apelam para falas majoritaristas que relembram o passado de maneira nostálgica e ascentuam as ameaças do presente. Como solução, apresentam-se em falas imperativas e hierarquizadas como guias para retomada da ordem e segurança. 
 
 
 \chapter{Como classificar Agentes Autoritários?}\label{metodologia}
 
 \section{As estratégias convencionais}
 
+Conforme foi apresentado na seção \emph{Autoritarismo na política}, no capítulo 2, diversos trabalhos em Ciência Política se dedicaram a identificar causas e efeitos de políticos autoritários em regimes democráticos. Para isso, utilizam-se de um conjunto de estratégias metodológicas para classificar um agente autoritário. Nesse capítulo, abordará-se os principais critérios de classificação da literatura.
+
 \subsection{Avaliação de Especialista}
+
+A primeira e mais popular forma de classificação baseia-se em estudos de caso de lideranças políticas, nos quais suas atitudes e comportamentos são observados a partir de pronunciamentos, discursos e presença na mídia. A partir daí, são analisados holísticamente, tomando como base um referencial teórico, e, então, são identificados ou não como autoritários.
+
+Alguns dos exemplos dessa abordagem podem ser encontrados nos trabalhos de \citeonline{seligson2003democracies}, \citeonline{seligson2005feeding}, \citeonline{weyland2013latin} e \citeonline{levitsky2018democracies}. Em cada um deles, as autoras e os autores identificam características nas lideranças políticas -- em geral chefes do executivo -- que sugerem comportamento anti-democrático. Em algum dos casos, como o de Chavez, na Venezuela, e do General Hugo Banzer, na Bolívia, atos realizados após o início dos seus governos também fazem parte do escopo de análise.
+
+Entre as vantagens desse modelo de classificação, a precisão certamente é a principal delas. Construindo uma narrativa com tantos elementos, a credibilidade das suas conclusões é elevada. Pesquisas que optam por realizarem estudo de casos de líderes costumam oferecer um conjunto rico e convincente de evidências para seus resultados.
+
+Apesar da precisão na identificação, a abordagem baseada na análise de especialistas apresenta grandes limitações. Como trata-se de uma extensa coleta de informações sobre um agente político -- não raramente realizada de forma não sistemática -- a capacidade de replicabilidade dessas pesquisas é baixa e sua abrangência é limitada. Como recursos de pesquisa são limitados, líderes autoritários tendem a ganhar espaço nessas investigações acadêmicas apenas após ascenção para lugares de poder nos quais já representam risco para o regime demcorático.
 
 \subsection{Análise de Agenda Partidária}
 
+Nas investigações da dinâmica eleitoral de movimentos autoritários em regimes democráticos, partidos políticos frequentemente são tomados como unidade de análise. Como efeito, a literatura conta com um extenso histórico de pesquisas e registros que identificam a evolução desses partidos ao longo da história recente, tanto no que diz respeito a desempenho como radicalização \cite{norris2005radical, mudde2009populist, caiani2017radical, mudde2016introduction, mudde2017ideational}. 
+
+Como critério de clasificação de partidos autoritários, a Análise de Agenda Partidária baseia-se na ideologia expressa diretamente pelos partidos, em manifestos e programas de governo, na percepção do eleitorado da sua posição no espectro político, e das suas raízes históricas \cite{mudde2000ideology}. Como as unidades de análise estão presentes em pequeno número, há, atualmente, uma grande cobertura no mapeamento realizado por pesquisadores independentes.
+
+Um conjunto de trabalhos, que exemplifica essa abordagem, pode ser encontrada na literatura que trata de partidos políticos que herdaram, na sua fundação, recursos, conexões e ideologia dos governos autoritários que precederam as transições democráticas na América Latina \cite{loxton2015authoritarian, loxton2014authoritarian, lyons2016victorious, loxton2015authoritarian} e Europa Central \cite{grzymala2006authoritarian}. 
+
+Nessas pesquisas, a construção de uma imagem de campanha baseada em uma extensa lista de referências aos signos militares, além forte conexão dos programas de governo com plataformas securitárias e anti-comunistas, compõem o critério de demarcação.
+
+Contudo, como esclarece \citeonline{mudde2000ideology}, investigar o fenômeno do autoritarismo, a partir de uma definição ideológica, possui uma limitação no que diz respeito a falácia ecológica:
+
+\vspace{-.25cm}
+\begin{samepage}
+	\begin{quote}
+		Although party ideology is said to be the most important criterion for classification, it is used only in an indirect way, i.e. through the eyes of the party itself (party name) or of the voters. \cite{mudde2000ideology}
+	\end{quote}
+\end{samepage}
+\vspace{-.25cm}
+
+Se por um lado é possível construir uma medida com grande cobertura e relativa precisão -- apesar discordâncias na classificação serem tema de discussões recentes da literatura \cite{glasius2018authoritarianism, mudde2016introduction} -- por outro há uma limitação no que diz respeito a profundidade das inferências baseadas em agentes políticos agregados.
+
 \subsection{Survey com Elites}
 
-\subsection{Survey com Apoiadores}
+Survey com Elites são utilizadas
+
 
 \section{Análise Automatizada de Conteúdo}
+
+\begin{figure}[h]
+	\caption{Diagrama do Discurso Político}
+	\label{fig:diagrama}
+	\centering
+	\includegraphics[width=1\linewidth]{figures/diagrama_discurso_autoritario}
+\end{figure}
 
 \chapter{Prova de Conceito: o caso da Câmara dos Deputados}\label{resultados}
 
