adding text and references

--- a/text/bibli.bib
+++ b/text/bibli.bib
@@ -1931,3 +1931,126 @@ year={1972}
   publisher={Johns Hopkins University Press}
 }
 
+@article{macwilliams2016decides,
+  title={Who decides when the party doesn’t? Authoritarian voters and the rise of Donald Trump},
+  author={MacWilliams, Matthew C},
+  journal={PS: Political Science \& Politics},
+  volume={49},
+  number={4},
+  pages={716--721},
+  year={2016},
+  publisher={Cambridge University Press}
+}
+
+@article{booth1984political,
+  title={The political culture of authoritarianism in Mexico: a reexamination},
+  author={Booth, John A and Seligson, Mitchell A},
+  journal={Latin American Research Review},
+  volume={19},
+  number={1},
+  pages={106--124},
+  year={1984},
+  publisher={JSTOR}
+}
+
+@article{booth1994paths,
+  title={Paths to democracy and the political culture of Costa Rica, Mexico, and Nicaragua},
+  author={Booth, John A and Seligson, Mitchell A},
+  journal={Political culture and democracy in developing countries},
+  pages={99--130},
+  year={1994},
+  publisher={Lynne Rienner Boulder, CO}
+}
+
+@incollection{hoffmann2007methods,
+  title={Methods of elite research},
+  author={Hoffmann-Lange, Ursula},
+  booktitle={The Oxford handbook of political behavior},
+  year={2007}
+}
+
+@incollection{andreadis2017elite,
+ title = {Elite Surveys},
+ year = {2019},
+ pages = {112-127},
+ publisher = {Democracy and Extremism Series, Routledge},
+ author = {Andreadis, Ioannis and Ruth, Saskia P.},
+ booktitle = {The Ideational Approach to Populism: Concept, Theory, and Analysis}
+}
+
+@article{gabel2007estimating,
+  title={Estimating the effect of elite communications on public opinion using instrumental variables},
+  author={Gabel, Matthew and Scheve, Kenneth},
+  journal={American Journal of Political Science},
+  volume={51},
+  number={4},
+  pages={1013--1028},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+
+@book{zaller1992nature,
+  title={The nature and origins of mass opinion},
+  author={Zaller, John R and others},
+  year={1992},
+  publisher={Cambridge university press}
+}
+
+@book{achen2017democracy,
+  title={Democracy for realists: Why elections do not produce responsive government},
+  author={Achen, Christopher H and Bartels, Larry M},
+  volume={4},
+  year={2017},
+  publisher={Princeton University Press}
+}
+
+@article{stavrakakis2017new,
+  title={A new populism index at work: identifying populist candidates and parties in the contemporary Greek context},
+  author={Stavrakakis, Yannis and Andreadis, Ioannis and Katsambekis, Giorgos},
+  journal={European Politics and Society},
+  volume={18},
+  number={4},
+  pages={446--464},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+
+@article{andreadis2017european,
+  title={European populist parties in government: How well are voters represented? Evidence from Greece},
+  author={Andreadis, Ioannis and Stavrakakis, Yannis},
+  journal={Swiss Political Science Review},
+  volume={23},
+  number={4},
+  pages={485--508},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{ruth2015measuring,
+  title={Measuring Populist Attitudes in Latin America’s Parliamentary Elites},
+  author={Ruth, Saskia Pauline and Baracaldo, Adriana Marcela Ram{\'\i}rez},
+  booktitle={ALACIP Annual Congress, Lima (Peru)},
+  year={2015}
+}
+
+@article{stevens2006authoritarian,
+  title={Authoritarian attitudes, democracy, and policy preferences among Latin American elites},
+  author={Stevens, Daniel and Bishin, Benjamin G and Barr, Robert R},
+  journal={American Journal of Political Science},
+  volume={50},
+  number={3},
+  pages={606--620},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@article{joly2018personality,
+  title={Personality and party ideology among politicians. A closer look at political elites from Canada and Belgium},
+  author={Joly, Jeroen K and Hofmans, Joeri and Loewen, Peter},
+  journal={Frontiers in psychology},
+  volume={9},
+  pages={552},
+  year={2018},
+  publisher={Frontiers}
+}
+
