--- a/text/dissertacao.tex
+++ b/text/dissertacao.tex
@@ -517,31 +517,39 @@ Entre as vantagens desse modelo de classificação, a precisão certamente é a 
 
 Apesar da precisão na identificação, a abordagem baseada na análise de especialistas apresenta grandes limitações. Como trata-se de uma extensa coleta de informações sobre um agente político -- não raramente realizada de forma não sistemática -- a capacidade de replicabilidade dessas pesquisas é baixa e sua abrangência é limitada. Como recursos de pesquisa são limitados, líderes autoritários tendem a ganhar espaço nessas investigações acadêmicas apenas após ascenção para lugares de poder nos quais já representam risco para o regime demcorático.
 
-\subsection{Análise de Agenda Partidária}
+\subsection{Análise de Movimento Político}
 
-Nas investigações da dinâmica eleitoral de movimentos autoritários em regimes democráticos, partidos políticos frequentemente são tomados como unidade de análise. Como efeito, a literatura conta com um extenso histórico de pesquisas e registros que identificam a evolução desses partidos ao longo da história recente, tanto no que diz respeito a desempenho como radicalização \cite{norris2005radical, mudde2009populist, caiani2017radical, mudde2016introduction, mudde2017ideational}. 
+Nas investigações da dinâmica eleitoral de movimentos autoritários em regimes democráticos, partidos políticos frequentemente são tomados como unidade de análise, porém movimentos sociais também integram essas análises \cite{caiani2017radical}. Como efeito, a literatura conta com um extenso histórico de pesquisas e registros que identificam a evolução desses partidos e grupos organizados ao longo da história recente, tanto no que diz respeito a desempenho como radicalização \cite{norris2005radical, mudde2009populist, caiani2017radical, mudde2016introduction, mudde2017ideational}. 
 
-Como critério de clasificação de partidos autoritários, a Análise de Agenda Partidária baseia-se na ideologia expressa diretamente pelos partidos, em manifestos e programas de governo, na percepção do eleitorado da sua posição no espectro político, e das suas raízes históricas \cite{mudde2000ideology}. Como as unidades de análise estão presentes em pequeno número, há, atualmente, uma grande cobertura no mapeamento realizado por pesquisadores independentes.
+Como critério de clasificação de partidos autoritários, a Análise de Agenda Partidária baseia-se na ideologia expressa diretamente pelos partidos, em manifestos e programas de governo, na percepção do eleitorado da sua posição no espectro político, e das suas raízes históricas \cite{mudde2000ideology}. Frequentemente \emph{surveis} com o eleitorado também integram fonte de informação para o enquadramento em tipologias \cite{booth1984political, booth1994paths, macwilliams2016decides}. Como as unidades de análise estão presentes em pequeno número, ou são mensuradas de informa indireta, há, atualmente, uma grande cobertura no mapeamento realizado por pesquisadores independentes.
 
 Um conjunto de trabalhos, que exemplifica essa abordagem, pode ser encontrada na literatura que trata de partidos políticos que herdaram, na sua fundação, recursos, conexões e ideologia dos governos autoritários que precederam as transições democráticas na América Latina \cite{loxton2015authoritarian, loxton2014authoritarian, lyons2016victorious, loxton2015authoritarian} e Europa Central \cite{grzymala2006authoritarian}. 
 
-Nessas pesquisas, a construção de uma imagem de campanha baseada em uma extensa lista de referências aos signos militares, além forte conexão dos programas de governo com plataformas securitárias e anti-comunistas, compõem o critério de demarcação.
+Nessas pesquisas, a construção de uma imagem de campanha baseada em uma extensa lista de referências aos signos militares, além forte conexão dos programas de governo com plataformas securitárias e anti-comunistas, compõem o critério de demarcação. Contudo, como esclarece \citeonline{mudde2000ideology}, investigar o fenômeno do autoritarismo, a partir de uma definição ideológica, possui uma limitação no que diz respeito a falácia ecológica:
 
-Contudo, como esclarece \citeonline{mudde2000ideology}, investigar o fenômeno do autoritarismo, a partir de uma definição ideológica, possui uma limitação no que diz respeito a falácia ecológica:
-
-\vspace{-.25cm}
 \begin{samepage}
 	\begin{quote}
 		Although party ideology is said to be the most important criterion for classification, it is used only in an indirect way, i.e. through the eyes of the party itself (party name) or of the voters. \cite{mudde2000ideology}
 	\end{quote}
 \end{samepage}
-\vspace{-.25cm}
 
 Se por um lado é possível construir uma medida com grande cobertura e relativa precisão -- apesar discordâncias na classificação serem tema de discussões recentes da literatura \cite{glasius2018authoritarianism, mudde2016introduction} -- por outro há uma limitação no que diz respeito a profundidade das inferências baseadas em agentes políticos agregados.
 
+\vspace{2cm}
+
 \subsection{Survey com Elites}
 
-Survey com Elites são utilizadas
+A utilização de dados fruto de questionários aplicados a elites está presente no histórico de produções em Ciência Política\cite{hoffmann2007methods, andreadis2017elite}. Em consonância com a convergência recente da literatura para apontar papel preponderante das elites na formação da opinião pública \cite{zaller1992nature, gabel2007estimating, achen2017democracy}, essa abordagem é capaz de identificar o núcleo dos principais agentes de constuição e fomento de ideologias políticas.
+
+A literatura que trata sobre populismo é um dos exemplos recentes de uso da técnica. Trabalhos como o de \citeonline{stavrakakis2017new} e \citeonline{andreadis2017european} dedicaram-se a utilizar respostas de \emph{surveis} aplicados a parlamentares para operacionalizar critérios de classificação de partidos populistas e mensurar a organicidade do vínculo entre representantes e eleitorado populista. Além disso, \citeonline{stevens2006authoritarian} dedicaram-se a identificar componentes da dinâmica autoritária entre elites políticas e civis -- no caso, a percepção de ameça e o apoio a soluções anti-democráticas.
+
+Como argumenta \citeonline{ruth2015measuring}, a ferramenta de \emph{survey} permite a coleta de dados atitudinais de um universo maior de indivíduos que ocupam lugar de poder em governos. Parlamentares compõem uma peça importante em governos e na formação da opinião pública, porém permanecem inexplorados pela literatura. Devido às limitações das técnicas de análise de discurso, estudos de caso e entrevistas com eleitores em i) produzir resultados para grande número de casos ou ii) medir com precisão a ideologia política das elites políticas, uma parte importante da dinâmica populista permanece desconhecida. 
+
+A posição de \citeonline{ruth2015measuring} pode ser facilmente estendida para o campo de estudos sobre autoritarismo. As técnicas revisadas ao longo desse cápitulo possuem limitações semelhantes às tratadas pelo autor e, consequentemente, as conclusões no que diz respeito a lacunas no conhecimento sobre autoritarismo entre parlamentares permanecem válidas. 
+
+Todavia, \emph{survey} com elites possuem graves limitações. Um dos grandes impeditivos de sua execução é o acesso restrito a população de entrevistados. Como consequência, a periodicidade de bases de dados de atitudes políticas de parlamentares costuma ser baixa. Mesmo em iniciativas como o \emph{Comparative Candidate Survey} (CCS), que reune dados de questionários aplicados a candidatos e políticos em exercício de diversos países, possuem itens limitados no que diz respeito a mensuração da indicadores da personalidade autoritária. 
+
+Como consequência das limitações, foram identificados apenas dois trabalhos nos quais autoritarismo foi mensurado direta ou indiretamente entre parlamentares por meio de \emph{survey} -- \citeonline{stevens2006authoritarian} e \citeonline{joly2018personality} são os únicos representantes da abordagem encontrados na revisão bibliográfica dessa dissertação. 
 
 
 \section{Análise Automatizada de Conteúdo}
